designing the last page

--- a/Protifolio/Portifolio.html
+++ b/Protifolio/Portifolio.html
@@ -96,11 +96,11 @@
             </div>
             <form action="#">
                 <input type="text" placeholder="Name">
-                <input type="email" placeholder="Email or Phone">
+                <input type="email" placeholder="Email or Phone" >
                 <input type="text" placeholder="Purposal Request" id="purposalReq">
-                <input type="text" name="Message" id="Message" placeholder="Message" id="textArea"><!--How to add the message box?-->
-                <p><input type="checkbox">I'm not a robot</p>
-                <input type="submit" placeholder="Send">
+                <input type="text" name="Message" id="Message" placeholder="Message"><!--How to add the message box?-->
+                <p><input type="checkbox"> I'm not a robot</p>
+                <input type="submit" value="send">
                 <input type="url" placeholder="Google Map">       
             </form>
         </div>
