adding google map to form sectioin

--- a/Protifolio/Portifolio.html
+++ b/Protifolio/Portifolio.html
@@ -91,16 +91,16 @@
          <div class="lastMainDiv">
             <h1>Be In Touch</h1>
             <div>
-                <input type="tel" value="(+62) 088223940431">
-                <input type="email" value="Web Design_@gmail.com">
+                <input type="tel" value="(+62) 088223940431" readonly>
+                <input type="email" value="Web Design_@gmail.com" id="infoEmail" readonly>
             </div>
             <form action="#">
-                <input type="text" placeholder="Name">
-                <input type="email" placeholder="Email or Phone" >
-                <input type="text" placeholder="Purposal Request" id="purposalReq">
-                <input type="text" name="Message" id="Message" placeholder="Message"><!--How to add the message box?-->
-                <p><input type="checkbox"> I'm not a robot</p>
-                <input type="submit" value="send">
+                <input type="text" placeholder="Name" required>
+                <input type="email" placeholder="Email or Phone" required>
+                <input type="text" placeholder="Purposal Request" id="purposalReq" required>
+                <input type="text" name="Message" id="Message" placeholder="Message" required><!--How to add the message box?-->
+                <p><input type="checkbox" required> I'm not a robot</p>
+                <input type="submit" value="send" required>
                 <input type="url" placeholder="Google Map">       
             </form>
         </div>
