completion of form section

--- a/Protifolio/Portifolio.html
+++ b/Protifolio/Portifolio.html
@@ -101,7 +101,7 @@
                 <input type="text" name="Message" id="Message" placeholder="Message" required><!--How to add the message box?-->
                 <p><input type="checkbox" required> I'm not a robot</p>
                 <input type="submit" value="send" required>
-                <input type="url" placeholder="Google Map">       
+                <input type="https://www.google.com/maps/place/Jakarta/@-6.2293796,106.6647058,11z/data=!3m1!4b1!4m6!3m5!1s0x2e69f3e945e34b9d:0x5371bf0fdad786a2!8m2!3d-6.1944491!4d106.8229198!16zL20vMDQ0cnY?entry=ttu&g_ep=EgoyMDI1MDgwNS4wIKXMDSoASAFQAw%3D%3D" id="url"  placeholder="Google Map">       
             </form>
         </div>
         </div>
