debugging the Univeristy Landing Page

--- a/Protifolio/Portifolio.html
+++ b/Protifolio/Portifolio.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="Portifolio.css" />
 </head>
+
 <body>
     <!--5 Sections-->
 
@@ -21,10 +23,13 @@
                 <span id="rightSpan">(+62) 88223940342</span>
             </nav>
             <div>
-            <h4>WEB DESIGNER ----</h4> <!--Adding a line later -->
-            <h1>JAWAD HAIDAIR</h1>
-            <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt eum nam recusandae, quis quam ea assumenda illum obcaecati repellat rem doloremque rerum commodi, perspiciatis quibusdam maxime soluta, tempora distinctio cumque?</P>
-            <input type="submit" value="View Portfolio"> <br>
+                <h4>WEB DESIGNER ----</h4> <!--Adding a line later -->
+                <h1>JAWAD HAIDARI</h1>
+                <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt eum nam recusandae, quis quam ea
+                    assumenda illum obcaecati repellat rem doloremque rerum commodi, perspiciatis quibusdam maxime
+                    soluta, tempora distinctio cumque?</P>
+                    <a href="#" id="LAT">View Portfolio</a> <br>
+                <!-- <input type="submit" value="View Portfolio"> <br> -->
             </div>
             <img src="IMG_6604.jpeg" alt="Main page Image">
         </div>
@@ -34,24 +39,36 @@
             <div class="imageSecond"><img src="IMG_6605 2.jpeg" alt="Second Page Images"></div>
             <div>
                 <h1>About Us ----</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, quam. Officiis sint maiores beatae quia, delectus, labore, illum quos eveniet molestiae pariatur sequi minus? Harum animi nesciunt repudiandae illo temporibus! br
-                Velit laborum porro laboriosam sequi, dolorem repellendus dolor eius! Quae deleniti alias consequuntur molestiae, facilis debitis necessitatibus repellat, accusantium inventore, totam impedit? Sit dicta similique inventore officiis. Fugiat, tenetur at! <br><br>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur architecto vitae adipisci. Autem atque ab harum, adipisci eveniet numquam pariatur quia cupiditate reiciendis veniam quas rem, debitis aliquid alias recusandae? <br>
-                Tenetur obcaecati similique veniam libero expedita deserunt in unde exercitationem harum nobis cumque, tempora excepturi dignissimos, dolor est nisi porro sapiente! Deserunt aut quas sit nisi numquam. Magni, earum? Ex?
-            </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, quam. Officiis sint maiores
+                    beatae quia, delectus, labore, illum quos eveniet molestiae pariatur sequi minus? Harum animi
+                    nesciunt repudiandae illo temporibus! br
+                    Velit laborum porro laboriosam sequi, dolorem repellendus dolor eius! Quae deleniti alias
+                    consequuntur molestiae, facilis debitis necessitatibus repellat, accusantium inventore, totam
+                    impedit? Sit dicta similique inventore officiis. Fugiat, tenetur at! <br><br>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur architecto vitae adipisci.
+                    Autem atque ab harum, adipisci eveniet numquam pariatur quia cupiditate reiciendis veniam quas rem,
+                    debitis aliquid alias recusandae? <br>
+                    Tenetur obcaecati similique veniam libero expedita deserunt in unde exercitationem harum nobis
+                    cumque, tempora excepturi dignissimos, dolor est nisi porro sapiente! Deserunt aut quas sit nisi
+                    numquam. Magni, earum? Ex?
+                </p>
             </div>
-        </div> 
+        </div>
         <div class="Section3"> <!--Third 
             Section-->
             <h1> My Portfolio</h1>
             <div class="Selfie Image1">
                 <img src="IMG_7404.jpeg" alt="Uni_Image">
                 <h2>Jawad Haidari ----</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti consequatur deserunt consectetur consequuntur iste blanditiis, quam quos incidunt ratione aspernatur ut tempora cumque sapiente fuga aliquid quae voluptate libero minus.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti consequatur deserunt consectetur
+                    consequuntur iste blanditiis, quam quos incidunt ratione aspernatur ut tempora cumque sapiente fuga
+                    aliquid quae voluptate libero minus.</p>
             </div>
             <div class="Selfie Image2">
                 <img src="IMG_8445.jpg" alt="Selfie Image">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae iste vero, velit, ex aspernatur nesciunt ut esse tempore natus praesentium incidunt, accusantium hic. Aspernatur pariatur ipsam, doloremque deleniti voluptates eos.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae iste vero, velit, ex aspernatur
+                    nesciunt ut esse tempore natus praesentium incidunt, accusantium hic. Aspernatur pariatur ipsam,
+                    doloremque deleniti voluptates eos.</p>
                 <a href="#">F</a>
                 <a href="#">IG</a>
                 <a href="#">X</a>
@@ -61,50 +78,55 @@
         <div class="Section4"> <!--Fourth Section-->
             <h1>My Documents</h1>
             <div>
-            <a href="#">ALL</a>
-            <a href="#">SCHOOL</a>
-            <a href="#">COURSES</a>
-            <a href="#">SPORTS</a>
-            <a href="#">ROUTINE</a>
+                <a href="#" class="FB4S">ALL</a>
+                <a href="#">SCHOOL</a>
+                <a href="#">COURSES</a>
+                <a href="#">SPORTS</a>
+                <a href="#">ROUTINE</a>
             </div>
-            <h5>______________________________________________________________________________________________________________________________________________________________</h5>
+            <h5>______________________________________________________________________________________________________________________________________________________________
+            </h5>
             <div class="Documents">
-            <img src="IMG_0976.jpeg" alt="Achivements Documents">
-            <img src="IMG_0976.jpeg" alt="Achivements Documents">
-            <img src="IMG_0976.jpeg" alt="Achivements Documents">
-            <img src="IMG_0976.jpeg" alt="Achivements Documents">
-            <img src="IMG_0976.jpeg" alt="Achivements Documents">
-            <img src="IMG_0976.jpeg" alt="Achivements Documents">
-            <img src="IMG_0976.jpeg" alt="Achivements Documents">
-            <img src="IMG_0976.jpeg" alt="Achivements Documents">
-            <img src="IMG_0976.jpeg" alt="Achivements Documents">
-            <img src="IMG_0976.jpeg" alt="Achivements Documents">
-            <img src="IMG_0976.jpeg" alt="Achivements Documents">
-            <img src="IMG_0976.jpeg" alt="Achivements Documents">
-            <img src="IMG_0976.jpeg" alt="Achivements Documents">
-            <img src="IMG_0976.jpeg" alt="Achivements Documents">
-            <img src="IMG_0976.jpeg" alt="Achivements Documents">
+                <img src="IMG_0976.jpeg" alt="Achivements Documents">
+                <img src="IMG_0976.jpeg" alt="Achivements Documents">
+                <img src="IMG_0976.jpeg" alt="Achivements Documents">
+                <img src="IMG_0976.jpeg" alt="Achivements Documents">
+                <img src="IMG_0976.jpeg" alt="Achivements Documents">
+                <img src="IMG_0976.jpeg" alt="Achivements Documents">
+                <img src="IMG_0976.jpeg" alt="Achivements Documents">
+                <img src="IMG_0976.jpeg" alt="Achivements Documents">
+                <img src="IMG_0976.jpeg" alt="Achivements Documents">
+                <img src="IMG_0976.jpeg" alt="Achivements Documents">
+                <img src="IMG_0976.jpeg" alt="Achivements Documents">
+                <img src="IMG_0976.jpeg" alt="Achivements Documents">
+                <img src="IMG_0976.jpeg" alt="Achivements Documents">
+                <img src="IMG_0976.jpeg" alt="Achivements Documents">
+                <img src="IMG_0976.jpeg" alt="Achivements Documents">
             </div>
             <a href="#" id="loadMore4thSec">Load More</a>
         </div>
         <div class="Section5"><!--Fifth Section-->
-         <div class="lastMainDiv">
-            <h1>Be In Touch</h1>
-            <div>
-                <input type="tel" value="(+62) 088223940431" readonly>
-                <input type="email" value="Web Design_@gmail.com" id="infoEmail" readonly>
+            <div class="lastMainDiv">
+                <h1>Be In Touch</h1>
+                <div>
+                    <input type="tel" value="(+62) 088223940431" readonly>
+                    <input type="email" value="Web Design_@gmail.com" id="infoEmail" readonly>
+                </div>
+                <form action="#">
+                    <input type="text" placeholder="Name" required autocomplete="on">
+                    <input type="email" placeholder="Email or Phone" required>
+                    <input type="text" placeholder="Purposal Request" id="purposalReq" required>
+                    <input type="text" name="Message" id="Message" placeholder="Message"
+                        required><!--How to add the message box?-->
+                    <p><input type="checkbox" required> I'm not a robot</p>
+                    <input type="submit" value="send" required>
+                    <input
+                        type="https://www.google.com/maps/place/Jakarta/@-6.2293796,106.6647058,11z/data=!3m1!4b1!4m6!3m5!1s0x2e69f3e945e34b9d:0x5371bf0fdad786a2!8m2!3d-6.1944491!4d106.8229198!16zL20vMDQ0cnY?entry=ttu&g_ep=EgoyMDI1MDgwNS4wIKXMDSoASAFQAw%3D%3D"
+                        id="url" placeholder="Google Map">
+                </form>
             </div>
-            <form action="#">
-                <input type="text" placeholder="Name" required>
-                <input type="email" placeholder="Email or Phone" required>
-                <input type="text" placeholder="Purposal Request" id="purposalReq" required>
-                <input type="text" name="Message" id="Message" placeholder="Message" required><!--How to add the message box?-->
-                <p><input type="checkbox" required> I'm not a robot</p>
-                <input type="submit" value="send" required>
-                <input type="https://www.google.com/maps/place/Jakarta/@-6.2293796,106.6647058,11z/data=!3m1!4b1!4m6!3m5!1s0x2e69f3e945e34b9d:0x5371bf0fdad786a2!8m2!3d-6.1944491!4d106.8229198!16zL20vMDQ0cnY?entry=ttu&g_ep=EgoyMDI1MDgwNS4wIKXMDSoASAFQAw%3D%3D" id="url"  placeholder="Google Map">       
-            </form>
-        </div>
         </div>
     </div>
 </body>
+
 </html>
