--- a/LastLandingPage.html
+++ b/LastLandingPage.html
@@ -77,7 +77,7 @@
                 <a href="#">MORE</a>
             </div>
             <div class="Images ResultIV">
-                <h2>HSUPPORT</h2>
+                <h2>SUPPORT</h2>
                 <P>Lorem ipsum dolor sit amet consectetur adipisicing elit.</P>
                 <a href="#">MORE</a>
             </div>
@@ -86,7 +86,7 @@
         <!--Fourth Section Structure-->
         <div class="fourthSection">
             <h1>What Is a Life Coach?</h1>
-            <img src="UniLandingPageImage/WhatsApp Image 2025-07-22 at 07.30.28.jpeg" alt=""> </img>
+            <img src="UniLandingPageImage/WhatsApp Image 2025-07-22 at 07.30.28.jpeg" alt="Fourth Section Image"> </img>
 
             <div>
                 <p>Most vegetables are naturally low in fat and calories. Click again or double click to start editing
