final debugging all sections

--- a/LastLandingPage.html
+++ b/LastLandingPage.html
@@ -113,7 +113,7 @@
                         deserunt! Laudantium.</p>
                     <br>
                     <p class="link">Images from <a href="#">Freepik</a></p>
-                    <input type="url" placeholder="READ MORE">
+                    <input type="url" value="READ MORE">
                 </div>
                 <div class="secondImage"><img src="UniLandingPageImage/StudentImage.jpeg"
                         style="width: 280px; height: 380px; border-radius:0.1px" alt="Student's Gathering Image"></div>
@@ -137,12 +137,12 @@
                 </img>
             </div>
             <div class="circle Image2">
-                <img src="UniLandingPageImage/StudentImage.jpeg" alt="Gathering Image">
+                <img src="UniLandingPageImage/WhatsApp Image 2025-07-22 at 07.30.29.jpeg" alt="Gathering Image">
                 <h1>DATA ANALYTICS</h1>
                 </img>
             </div>
             <div class="circle Image3">
-                <img src="UniLandingPageImage/StudentImage.jpeg" alt="Gathering Image">
+                <img src="UniLandingPageImage/WhatsApp Image 2025-07-22 at 07.30.28 (3).jpeg" alt="Gathering Image">
                 <h1>DEVELOPMENT</h1>
                 </img>
             </div>
