adding Vertical Navigation bar, transtion, hover, focus, changing background-color

--- a/Protifolio/Portifolio.html
+++ b/Protifolio/Portifolio.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="Portifolio.css" />
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -15,15 +16,24 @@
         <div class="Section1">
             <span id="leftSpan">Portfolio</span>
             <nav>
-                <a href="#">Home</a>
+                <!--How to use icon from Fontawesome.com?-->
+                <a href="#"><i class="fa-solid fa-house"></i>Home</a>
                 <a href="#">About</a>
                 <a href="#">Portfolio</a>
-                <a href="#">Awards</a>
+                <a href="#">Achivements</a>
                 <a href="#">Contact</a>
                 <span id="rightSpan">(+62) 88223940342</span>
             </nav>
+            <div class="verticalNavigation">
+                <h3>J H</h3>
+                <a href="#">F</a>   
+                <a href="#">IG</a>
+                <a href="#">X</a>
+                <a href="#">P</a>
+                <input type="email" id="verticalEmail" value="Web Design_@gmail.com">
+            </div>
             <div>
-                <h4>WEB DESIGNER ----</h4> <!--Adding a line later -->
+                <h4>WEB DESIGNER ___</h4> <!--Adding a line later -->
                 <h1>JAWAD HAIDARI</h1>
                 <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt eum nam recusandae, quis quam ea
                     assumenda illum obcaecati repellat rem doloremque rerum commodi, perspiciatis quibusdam maxime
@@ -38,7 +48,7 @@
             <div class="imageFirst"><img src="IMG_6595.jpeg" alt="Second Page Images"></div>
             <div class="imageSecond"><img src="IMG_6605 2.jpeg" alt="Second Page Images"></div>
             <div>
-                <h1>About Us ----</h1>
+                <h1>About Me</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, quam. Officiis sint maiores
                     beatae quia, delectus, labore, illum quos eveniet molestiae pariatur sequi minus? Harum animi
                     nesciunt repudiandae illo temporibus! br
@@ -103,6 +113,7 @@
                 <img src="IMG_0976.jpeg" alt="Achivements Documents">
                 <img src="IMG_0976.jpeg" alt="Achivements Documents">
             </div>
+            <p>Protfolio</p>
             <a href="#" id="loadMore4thSec">Load More</a>
         </div>
         <div class="Section5"><!--Fifth Section-->
@@ -114,7 +125,7 @@
                 </div>
                 <form action="#">
                     <input type="text" placeholder="Name" required autocomplete="on">
-                    <input type="email" placeholder="Email or Phone" required>
+                    <input type="email" placeholder="Email" required>
                     <input type="text" placeholder="Purposal Request" id="purposalReq" required>
                     <input type="text" name="Message" id="Message" placeholder="Message"
                         required><!--How to add the message box?-->
