completion of first page

--- a/Protifolio/Mushroom Website/MushroomWebsite.html
+++ b/Protifolio/Mushroom Website/MushroomWebsite.html
@@ -21,13 +21,14 @@
         <div class="headerSection">
             <div><h3>WEB</h3>
                 <h1>DESIGN &</h1>
-                <H1>DEVELOPMENT</H1>
+                <h1 id="color">DEVELOPMENT</h1>
             </div>
 
             <p> <a href="#">Lorem Impsum</a></p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, aperiam molestiae rem dolorum nisi asperiores! Veniam laborum sit facere modi ducimus. Cum repudiandae aspernatur voluptatem quis? Explicabo veritatis eius voluptate!</p>
 
             <input type="button" value="REAM MORE">
+            <!-- <img src="1c7ecaab5ee2b5ba2c40cd2efa367bc5.jpg" alt=""> -->
             
         </div>
     </div>
