designing the second page

--- a/Protifolio/Mushroom Website/MushroomWebsite.html
+++ b/Protifolio/Mushroom Website/MushroomWebsite.html
@@ -31,6 +31,18 @@
             <!-- <img src="1c7ecaab5ee2b5ba2c40cd2efa367bc5.jpg" alt=""> -->
             
         </div>
+
+        <!--Second Section -->
+        <div class="mainContent">
+            <img src="07ffa38beaa45f1adf93b08cdb06000e.jpg" alt="" class="Image1">
+            <img src="6e60a21e693186e0c928d40185d2b627.jpg" alt="" class="Image2">
+            <img src="9eae67db396820436879fede55a190cb.jpg" alt="" class="Image3">
+            <img src="ee807b2a08dec66c63ee5aefc596f95c.jpg" alt="" class="Image4">
+            <img src="813bb0ebf9c75ab89396e4d5f77d4d3e.jpg" alt="" class="Image5">
+            <img src="affbe21c379bd05c913683ec1dc7383c.jpg" alt="" class="Image6">
+            <img src="cfd58755f2f8a21848cea40f5f91a01f.jpg" alt="" class="Image7">
+            <img src="246919519cbd89ec97e0fa28fc97c19f.jpg" alt="" class="Image8">
+        </div>
     </div>
 </body>
 </html>
