--- a/Protifolio/Mushroom Website/MushroomWebsite.html
+++ b/Protifolio/Mushroom Website/MushroomWebsite.html
@@ -9,6 +9,7 @@
 <body>
     <div class="Container">
         <div class="mainPage">
+        <div id="anchor">
             <!--Anchor tag section-->
             <span><h1>Logo</h1></span>
             <a href="#">HOME</a>
@@ -31,9 +32,11 @@
             <!-- <img src="1c7ecaab5ee2b5ba2c40cd2efa367bc5.jpg" alt=""> -->
             
         </div>
+        </div>
 
         <!--Second Section -->
         <div class="mainContent">
+            <!-- <div class="images"> -->
             <img src="07ffa38beaa45f1adf93b08cdb06000e.jpg" alt="" class="Image1">
             <img src="6e60a21e693186e0c928d40185d2b627.jpg" alt="" class="Image2">
             <img src="9eae67db396820436879fede55a190cb.jpg" alt="" class="Image3">
@@ -42,6 +45,7 @@
             <img src="affbe21c379bd05c913683ec1dc7383c.jpg" alt="" class="Image6">
             <img src="cfd58755f2f8a21848cea40f5f91a01f.jpg" alt="" class="Image7">
             <img src="246919519cbd89ec97e0fa28fc97c19f.jpg" alt="" class="Image8">
+            <!-- </div> -->
         </div>
     </div>
 </body>
