designing the second page

--- a/PortfolioUsingFlexbox/ProtfolioUsingFlexbox.html
+++ b/PortfolioUsingFlexbox/ProtfolioUsingFlexbox.html
@@ -39,5 +39,18 @@
     </div>
 
     <!--second section-->
+    <div class="secondSection">
+        <div class="leftCol">
+            <img src="../Mushroom Website Images/1c7ecaab5ee2b5ba2c40cd2efa367bc5.jpg" alt="Mushroom Image">
+            <img src="../Mushroom Website Images/1c7ecaab5ee2b5ba2c40cd2efa367bc5.jpg" alt="Mushroom Image" class="imageTop">
+        </div>
+            <div class="rightCol">
+                <h1>About Us</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum alias facere corrupti laboriosam modi rem sunt ratione a magnam id, ea eligendi accusamus quidem obcaecati earum quod numquam dolore nemo.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum alias facere corrupti laboriosam modi rem sunt ratione a magnam id, ea eligendi accusamus quidem obcaecati earum quod numquam dolore nemo.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum alias facere corrupti laboriosam modi rem sunt ratione a magnam id, ea eligendi accusamus quidem obcaecati earum quod numquam dolore nemo.</p>
+            </div>
+        
+    </div>
 </body>
 </html>
